124 client credentials are not encoded correctly and some may therefore not work (#126)