@@ -5,6 +5,7 @@ import static no.bankaxept.epayment.client.test.Verifier.verifyBadRequest;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.Flow;
@@ -15,29 +16,23 @@ import org.junit.jupiter.api.Test;
 
 public class TokenRequestorClientIT {
 
-  private final TokenRequestorClient testClient;
-
-  {
-    try {
-      testClient = new TokenRequestorClient(
-          new URI("https://api.epp-stoetest.cloud/access-token/v1/accesstoken").toURL(),
-          new URI("https://api.epp-stoetest.cloud/token-requestor").toURL(),
-          System.getenv("CLIENT_ID"),
-          System.getenv("CLIENT_SECRET")
-      );
-    } catch (MalformedURLException | URISyntaxException e) {
-      throw new RuntimeException(e);
-    }
+  private TokenRequestorClient testClient() throws MalformedURLException {
+    return new TokenRequestorClient(
+        new URL(System.getenv("AUTHORIZATION_SERVER_URL")),
+        new URL(System.getenv("TOKEN_REQUESTOR_API_URL")),
+        System.getenv("CLIENT_ID"),
+        System.getenv("CLIENT_SECRET")
+    );
   }
 
   @Test
-  public void enrolCardRequest() {
-    verifyBadRequest(enrolCardRequest(testClient));
+  public void enrolCardRequest() throws MalformedURLException {
+    verifyBadRequest(enrolCardRequest(testClient()));
   }
 
   @Test
-  public void eligibleBanksRequest() {
-    verifyBadRequest(testClient.eligibleBanks(List.of("090909")), "Invalid bank identifier 090909");
+  public void eligibleBanksRequest() throws MalformedURLException {
+    verifyBadRequest(testClient().eligibleBanks(List.of("090909")), "Invalid bank identifier 090909");
   }
 
   private Flow.Publisher<RequestStatus> enrolCardRequest(TokenRequestorClient client) {
